--- a/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/DynamicDriving.DriverManagement.API.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.AzureServiceBus\DynamicDriving.AzureServiceBus.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.MassTransit\DynamicDriving.MassTransit.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
     <ProjectReference Include="..\..\..\Contracts\DynamicDriving.Models\DynamicDriving.Models.csproj" />
     <ProjectReference Include="..\DynamicDriving.DriverManagement.Core\DynamicDriving.DriverManagement.Core.csproj" />
