--- a/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
@@ -13,5 +13,9 @@
   "IdentitySettings": {
     "Authority": "https://localhost:7070",
     "Audience": "DriverManagement"
+  },
+  "RabbitmqSettings": {
+    "Host": "localhost",
+    "ServiceName": "DriverManagement"
   }
 }
