--- a/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
+++ b/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
@@ -14,5 +14,9 @@
   "IdentitySettings": {
     "Authority": "https://localhost:7070",
     "Audience": "TripManagement"
+  },
+  "RabbitmqSettings": {
+    "Host": "localhost",
+    "ServiceName": "DriverManagement"
   }
 }
