--- a/Services/Trips/DynamicDriving.TripManagement.Application/DynamicDriving.TripManagement.Application.csproj
+++ b/Services/Trips/DynamicDriving.TripManagement.Application/DynamicDriving.TripManagement.Application.csproj
@@ -15,8 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.AzureServiceBus\DynamicDriving.AzureServiceBus.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.EventBus\DynamicDriving.EventBus.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.MassTransit\DynamicDriving.MassTransit.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
     <ProjectReference Include="..\DynamicDriving.TripManagement.Domain\DynamicDriving.TripManagement.Domain.csproj" />
   </ItemGroup>
