--- a/BuildingBlocks/DynamicDriving.EventBus/DynamicDriving.EventBus.csproj
+++ b/BuildingBlocks/DynamicDriving.EventBus/DynamicDriving.EventBus.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Contracts\DynamicDriving.Events\DynamicDriving.Events.csproj" />
   </ItemGroup>
 
