--- a/TestHarness/MassTransit.Receiver.TestHarness/appsettings.json
+++ b/TestHarness/MassTransit.Receiver.TestHarness/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "RabbitmqSettings": {
-    "Host": "localhost",
+  "MassTransitSettings": {
+    "RabbitMqHost": "localhost",
     "ServiceName": "Sender.TestHarness"
   }
 }
