--- a/TestHarness/MassTransit.Sender.TestHarness/appsettings.json
+++ b/TestHarness/MassTransit.Sender.TestHarness/appsettings.json
@@ -1,6 +1,6 @@
 {
-	"RabbitmqSettings": {
-		"Host": "localhost",
+	"MassTransitSettings": {
+		"RabbitMqHost": "localhost",
 		"ServiceName": "Sender.TestHarness"
 	}
 }
