--- a/Services/Drivers/DynamicDriving.DriverManagement.Core/DynamicDriving.DriverManagement.Core.csproj
+++ b/Services/Drivers/DynamicDriving.DriverManagement.Core/DynamicDriving.DriverManagement.Core.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.EventBus\DynamicDriving.EventBus.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.MassTransit\DynamicDriving.MassTransit.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
+    <ProjectReference Include="..\..\..\Contracts\DynamicDriving.Events\DynamicDriving.Events.csproj" />
   </ItemGroup>
 
   <ItemGroup>
