--- a/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
+++ b/Services/Drivers/DynamicDriving.DriverManagement.API/appsettings.Development.json
@@ -14,8 +14,8 @@
     "Authority": "https://localhost:7070",
     "Audience": "DriverManagement"
   },
-  "RabbitmqSettings": {
-    "Host": "localhost",
+  "MassTransitSettings": {
+    "RabbitMqHost": "localhost",
     "ServiceName": "DriverManagement"
   }
 }
