--- a/Contracts/DynamicDriving.Contracts/DynamicDriving.Contracts.csproj
+++ b/Contracts/DynamicDriving.Contracts/DynamicDriving.Contracts.csproj
@@ -13,4 +13,8 @@
     <None Remove="Protos\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+  </ItemGroup>
+
 </Project>
