--- a/Services/Drivers/DynamicDriving.DriverManagement.Core/DynamicDriving.DriverManagement.Core.csproj
+++ b/Services/Drivers/DynamicDriving.DriverManagement.Core/DynamicDriving.DriverManagement.Core.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.MassTransit\DynamicDriving.MassTransit.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
-    <ProjectReference Include="..\..\..\Contracts\DynamicDriving.Events\DynamicDriving.Events.csproj" />
+    <ProjectReference Include="..\..\..\Contracts\DynamicDriving.Contracts\DynamicDriving.Contracts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
