--- a/TestHarness/MassTransit.Receiver.TestHarness/MassTransit.Receiver.TestHarness.csproj
+++ b/TestHarness/MassTransit.Receiver.TestHarness/MassTransit.Receiver.TestHarness.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\BuildingBlocks\DynamicDriving.MassTransit\DynamicDriving.MassTransit.csproj" />
-    <ProjectReference Include="..\..\Contracts\DynamicDriving.Events\DynamicDriving.Events.csproj" />
+    <ProjectReference Include="..\..\Contracts\DynamicDriving.Contracts\DynamicDriving.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
