--- a/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
+++ b/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
@@ -15,8 +15,8 @@
     "Authority": "https://localhost:7070",
     "Audience": "TripManagement"
   },
-  "RabbitmqSettings": {
-    "Host": "localhost",
+  "MassTransitSettings": {
+    "RabbitMqHost": "localhost",
     "ServiceName": "DriverManagement"
   }
 }
