add mass transit in Identity service

--- a/Services/Identity/DynamicDriving.Identity.Service/DynamicDriving.Identity.Service.csproj
+++ b/Services/Identity/DynamicDriving.Identity.Service/DynamicDriving.Identity.Service.csproj
@@ -19,7 +19,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.MassTransit\DynamicDriving.MassTransit.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\DynamicDriving.SharedKernel\DynamicDriving.SharedKernel.csproj" />
+    <ProjectReference Include="..\..\..\Contracts\DynamicDriving.Contracts\DynamicDriving.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
