--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft.AspNetCore.Authorization": "Information"
     }
   },
-  "AllowedOrigin" : "http://localhost:3000",
+  "AllowedOrigin": "http://localhost:3000",
   "IdentityServerSettings": {
     "Clients": [
       {
@@ -53,5 +53,9 @@
         ]
       }
     ]
+  },
+  "MassTransitSettings": {
+    "RabbitMqHost": "localhost",
+    "ServiceName": "DriverManagement"
   }
 }
