--- a/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
+++ b/Services/Trips/DynamicDriving.TripManagement.API/appsettings.Development.json
@@ -17,6 +17,6 @@
   },
   "MassTransitSettings": {
     "RabbitMqHost": "localhost",
-    "ServiceName": "DriverManagement"
+    "ServiceName": "TripManagement"
   }
 }
