--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -56,6 +56,6 @@
   },
   "MassTransitSettings": {
     "RabbitMqHost": "localhost",
-    "ServiceName": "DriverManagement"
+    "ServiceName": "IdentitySerice"
   }
 }
