--- a/Services/TripService/DynamicDriving.TripService.API/appsettings.Development.json
+++ b/Services/TripService/DynamicDriving.TripService.API/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "MongoOptions": {
+    "Client": "mongodb://localhost:27017",
+    "Database": "TripServiceDB"
+  },
+  "MassTransitSettings": {
+    "RabbitMqHost": "localhost",
+    "ServiceName": "TripService"
   }
 }
