--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.Development.json
@@ -26,7 +26,8 @@
           "tripmanagement.readaccess",
           "drivermanagement.fullaccess",
           "IdentityServerApi",
-          "roles"
+          "roles",
+          "tripservice.fullaccess"
         ],
         "AlwaysIncludeUserClaimsInIdToken": true
       },
