--- a/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
+++ b/Services/Identity/DynamicDriving.Identity.Service/appsettings.json
@@ -31,6 +31,9 @@
       },
       {
         "Name": "IdentityServerApi"
+      },
+      {
+        "Name": "tripservice.fullaccess"
       }
     ],
     "ApiResources": [
@@ -64,6 +67,17 @@
         "Name": "Identity",
         "Scopes": [
           "IdentityServerApi"
+        ],
+        "UserClaims": [
+          "role",
+          "name",
+          "email"
+        ]
+      },
+      {
+        "Name": "TripService",
+        "Scopes": [
+          "tripservice.fullaccess"
         ],
         "UserClaims": [
           "role",
