--- a/Services/TripService/DynamicDriving.TripService.API/DynamicDriving.TripService.API.csproj
+++ b/Services/TripService/DynamicDriving.TripService.API/DynamicDriving.TripService.API.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="MassTransit.MongoDB" Version="8.0.3" />
+    <!--<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />-->
   </ItemGroup>
 
   <ItemGroup>
