Fix invalid login Attempt in Identity service

--- a/Services/Trips/DynamicDriving.TripManagement.API/Properties/launchSettings.json
+++ b/Services/Trips/DynamicDriving.TripManagement.API/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     "DynamicDriving.TripManagement.API": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      //"launchBrowser": true,
+      //"launchUrl": "swagger",
       "applicationUrl": "https://localhost:7286;http://localhost:5286",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
