add missing identity settings

--- a/Services/TripService/DynamicDriving.TripService.API/appsettings.Development.json
+++ b/Services/TripService/DynamicDriving.TripService.API/appsettings.Development.json
@@ -12,5 +12,9 @@
   "MassTransitSettings": {
     "RabbitMqHost": "localhost",
     "ServiceName": "TripService"
+  },
+  "IdentitySettings": {
+    "Authority": "https://localhost:7070",
+    "Audience": "TripService"
   }
 }
