--- a/Services/Identity/DynamicDriving.Identity.Service/DynamicDriving.Identity.Service.csproj
+++ b/Services/Identity/DynamicDriving.Identity.Service/DynamicDriving.Identity.Service.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <!--Start Middleware Analysis-->
+    <PackageReference Include="Microsoft.AspNetCore.MiddlewareAnalysis" Version="6.0.7" />
+    <PackageReference Include="Microsoft.Extensions.DiagnosticAdapter" Version="3.1.27" />
+    <!--End Middleware Analysis-->
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
     <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
     <PackageReference Include="IdentityServer4" Version="4.1.2" />
