--- a/Services/TripService/DynamicDriving.TripService.API/appsettings.json
+++ b/Services/TripService/DynamicDriving.TripService.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "QueueSettings": {
+    "ConfirmTripQueueAddress": "queue:trip-management-confirm-trip"
+  }
 }
