Completed happy path Saga

--- a/Services/TripService/DynamicDriving.TripService.API/appsettings.json
+++ b/Services/TripService/DynamicDriving.TripService.API/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "QueueSettings": {
-    "ConfirmTripQueueAddress": "queue:trip-management-confirm-trip"
+    "ConfirmTripQueueAddress": "queue:trip-management-confirm-trip",
+    "DeductCreditsQueueAddress": "queue:identity-serice-deduct-credits"
   }
 }
