Saga compensating actions

--- a/Services/TripService/DynamicDriving.TripService.API/appsettings.json
+++ b/Services/TripService/DynamicDriving.TripService.API/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "QueueSettings": {
     "ConfirmTripQueueAddress": "queue:trip-management-confirm-trip",
-    "DeductCreditsQueueAddress": "queue:identity-serice-deduct-credits"
+    "DeductCreditsQueueAddress": "queue:identity-serice-deduct-credits",
+    "InvalidateTripQueueAddress": "queue:trip-management-invalidate-trip"
   }
 }
