add seq logging

--- a/Services/TripService/DynamicDriving.TripService.API/appsettings.json
+++ b/Services/TripService/DynamicDriving.TripService.API/appsettings.json
@@ -10,5 +10,13 @@
     "ConfirmTripQueueAddress": "queue:trip-management-confirm-trip",
     "DeductCreditsQueueAddress": "queue:identity-serice-deduct-credits",
     "InvalidateTripQueueAddress": "queue:trip-management-invalidate-trip"
+  },
+  "SeqSettings": {
+    "Host": "localhost",
+    "Port": "5341"
+  },
+  "JaegerSettings": {
+    "Host": "localhost",
+    "Port": 6831
   }
 }
