--- a/Services/TripService/DynamicDriving.TripService.API/DynamicDriving.TripService.API.csproj
+++ b/Services/TripService/DynamicDriving.TripService.API/DynamicDriving.TripService.API.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.0.0-rc9.4" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.0.0-rc9.4" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.0.0-rc9.4" />
+    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="MassTransit.MongoDB" Version="8.0.3" />
     <!--<PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />-->
